--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,7 @@ block content
     div.jumbotron
       h1 Downtime
       p Downtime provides basic website monitoring with the power of <a href="http://www.rackspace.com/cloud/monitoring">Rackspace Cloud Monitoring</a>. If the website ever goes down or starts returning a non-2xx status code, you'll get an email letting you know!
-      p Downtime is built on top of <a href="http://www.rackspace.com/cloud/monitoring">Rackspace Cloud Monitoring</a>.
       if !user
-        a.btn.btn-lg.btn-primary(href="/auth/github" role="button") Get started by signing in with Github
+        a.btn.btn-lg.btn-primary(href="/auth/github" role="button") Sign in with Github to get started
+      else
+        a.btn.btn-lg.btn-primary(href="/create" role="button") Monitor a website now
