--- a/views/header.jade
+++ b/views/header.jade
@@ -10,6 +10,8 @@ div.navbar.navbar-inverse.navbar-static-top(role='navigation')
       ul.nav.navbar-nav
         if user
           li
+            a(href="/dashboard") Dashboard
+          li
             a(href="/create") Monitor a Website
         li
           a(href="#about") About
