--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,8 +1,9 @@
 doctype
 html
   head
-    title= title
+    title= title || 'Downtime: Simple URL Monitoring'
     link(rel='stylesheet', href='//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css')
+    link(rel='stylesheet', href='/static/css/main.css')
   body
     include header
 
