Add support for getting metrics so we can start plotting. Also grab them on the dashbaord.

--- a/views/index.jade
+++ b/views/index.jade
@@ -5,6 +5,7 @@ block content
     div.jumbotron
       h1 Downtime
       p Downtime provides basic website monitoring with the power of <a href="http://www.rackspace.com/cloud/monitoring">Rackspace Cloud Monitoring</a>. If the website ever goes down or starts responding with a non-2xx status code, you'll get an email letting you know! We are even nice enough to let you know when everything looks good again.
+      p Downtime is just a toy. Don't actually depend on it for anything important!
       if !user
         a.btn.btn-lg.btn-primary(href="/auth/github" role="button") Sign in with Github to get started
       else
